change get all product method
